# UVLARM-wallE

./: .gitignore  README.md
CG/: Readme.md  laser_scan-to-point_cloud.py  readme.md  scan_echo.py  tuto_move.py  tutosim_launch.yaml
CG/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CG/log/: latest_build
CG/tuto_cg/: CMakeLists.txt  package.xml
Eliot-dump/: camera_node2.py  isImage.py  jh.drawio  px_coo-angle.py  readme.md  transform_pose.py
Eliot-dump/Computer_vision/: tools.py
depth/: depth_node.py  seuillage_node.py
grp_wallE/: package.xml
grp_wallE/launch/: challenge_1_launch.yaml  tbot_launch.yaml  visualize_launch.yaml
grp_wallE/src/: laser_scan-point_cloud.py  point_cloud-action.py
grp_wallE_ch1/: CMakeLists.txt  package.xml
grp_wallE_ch1/config/: rvizCH1.rviz
grp_wallE_ch1/launch/: tbot_launch.yaml  visualize_launch.yaml
grp_wallE_ch1/src/: laser_scan-point_cloud.py  navigation_node.py  realsense_node.py  seuillage.py  seuillage_node.py
grp_wallE_ch2/: CMakeLists.txt  ch2.drawio  package.xml
grp_wallE_ch2/config/: config_challenge_2.rviz
grp_wallE_ch2/launch/: challenge_2_launch.yaml  control_launch.yaml  operator_launch.yaml  simulation_launch.yaml  tbot_launch.yaml  test_launch.yaml  vision_launch.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
reactive_move/: CMakeLists.txt  package.xml
tuto_kickoff/: CMakeLists.txt  package.xml  tutosim_launch.yaml
tuto_vision/: CMakeLists.txt  package.xml
vision/: CMakeLists.txt  package.xml
(+42 files in other folders)
